InTheBoks.Web/Content/Site.css
@import url(http://fonts.googleapis.com/css?family=Pontano+Sans|Gudea);

/*div {
    border: 1px solid red;
}*/

html {
    height: 100%;
    background: url(splash_1080.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

@media only screen and (max-width: 640px) {

    html {
        background: white;
    }

    .wide {
        display: none;
    }

}

h1, h2, h3, h4, h5 {
    margin: 0;
    padding: 0;
}

body {
    height: 100%;
    -ms-content-zooming: none;
    font-size: .85em;
    font-family: "Gudea", "Segoe UI", Verdana, Helvetica, Sans-Serif;
    color: #232323;
    color: white;
    /*
    background-color: #0E0E0E;
    background-image: url('bg.png');
    background-repeat: repeat-x;*/
    margin: 0;
    padding: 0;
    overflow: auto;
}

.bodybg {

    background-color: #0E0E0E;
    background-image: url('bg.png');
    background-repeat: repeat-x;
    overflow: hidden;
}

* {
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: -moz-none;
    -o-user-select: none;
    user-select: none;
}

input {
    -webkit-user-select: text;
    -khtml-user-select: text;
    -moz-user-select: text;
    -ms-user-select: text;
    -o-user-select: text;
    user-select: text;
}

header, footer, nav, section {
    display: block;
}

header {
    margin: 0px;
}

    header div {
        float: right;
        font-size: 1.1em;
    }


#AppContainer {
    margin: 0;
    padding: 0px;
    display: block;
    /*position: fixed;
    width: 100%;
    height: 100%;*/
    z-index: 5000;
    clear: both;
}

#listOptions {
    position: absolute;
    color: black;
    display: none;
}

    #listOptions .balloon {
        padding-left: 20px;
        margin: 0;
        padding: 0;
        height: 20px;
    }

        #listOptions .balloon img {
            margin: 0;
            padding: 0;
            float: right;
        }

    #listOptions .options {
        background-color: white;
        padding: 10px;
        border-radius: 7px;
    }

.action {
    cursor: pointer;
    width: 32px;
    height: 32px;
    -moz-transition: opacity 0.1s linear;
    -webkit-transition: opacity 0.1s linear;
    -o-transition: opacity 0.1s linear;
    transition: opacity 0.1s linear;
}

    .action:hover {
        opacity: 0.65;
    }

.big {
    width: 40px;
    height: 40px;
}

.huge {
    width: 48px;
    height: 48px;
}

.thumbnails {
}

    .thumbnails div img {
        height: 128px;
        -moz-transition: opacity 0.2s linear;
        -webkit-transition: opacity 0.2s linear;
        -o-transition: opacity 0.2s linear;
        transition: opacity 0.2s linear;
        /*border: 5px solid silver;*/
    }

        .thumbnails div img:hover {
            opacity: 0.5;
        }


    .thumbnails > span {
        padding: 0;
        margin: 0;
        display: inline-block;
        background-image: url(/Content/icons/checked2.png);
        z-index: 10000;
    }


        .thumbnails > span:after {
            content: url(/Content/icons/checked2.png);
            position: relative;
            pointer-events: none;
            z-index: 6000;
        }

.list_details {

    float: left;
    position: relative;
    font-size: 1.2em;
    display: none;
    line-height: 70px;
    white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
    margin-right: 10px;
}

.right {
    float: right;
}

div.thumbnail_container {
    float: left;
    overflow: hidden;
    text-overflow: ellipsis;
}

div.wrapper {
    float: left; /* important */
    position: relative; /* important(so we can absolutely position the description div */
    margin-right: 3px;
    margin-bottom: 3px;
    border: 3px solid transparent;
    overflow: hidden;

    overflow: hidden;
    text-overflow: ellipsis;
}

input {
    font-size: 1.5em;
    line-height: 2em;
}

    input[type='search'] {
        color: white;
        background-color: rgba(52, 52, 52, 0.42);
    }

::-webkit-input-placeholder {
    color: silver !important;
    font-style: italic;
}

:-moz-placeholder {
    color: silver !important;
    font-style: italic;
}

:-ms-input-placeholder {
    color: silver !important;
    font-style: italic;
}


div.selection {
    border: 3px solid white;
    border-top-right-radius: 8px;
}

    div.selection:before {
        content: url(/Content/icons/checked2.png);
        float: right;
        right: 3px;
        top: 2px;
        position: absolute;
        display: inline;
    }

    div.selection img {
        opacity: 0.5;
    }


div.description {
    display: none;
    position: absolute; /* absolute position (so we can position it where we want)*/
    bottom: 0px; /* position will be on bottom */
    left: 0px;
    width: 100%;
    /* styling bellow */
    background-color: black;
    font-size: 15px;
    color: white;
    opacity: 0.6; /* transparency */
    filter: alpha(opacity=60); /* IE transparency */
    pointer-events: none;
}

    div.description:hover {
    }

p.description_content {
    padding: 10px;
    margin: 0px;
}



#header {
    width: 100%;
    clear: both;
}

#content {
    width: 100%;
}

.stretch {
}

.stretchFull {
}


#content #left-sidebar {
    width: 150px;
    overflow: auto;
    float: left;
}

#content #friends {
    width: 150px;
    overflow: hidden;
    float: right;
}

#friendlist, #friendfeed {
    width: 150px;
    font-size: 0.8em;
    overflow: auto;
}

.friendFace {
        vertical-align: middle;
        width: 24px;
        height: 24px;
        margin-right: 4px;
}

.friendLink {
    text-decoration: none;
}

#friendlist {
    border-bottom: 2px solid silver;
    height: 100px;
    margin-bottom: 5px;
}

    #friendlist div {
        overflow: hidden;
        text-overflow: ellipsis;
        -o-text-overflow: ellipsis;
        white-space: nowrap;
        width: 100%;
    }

/*
#content #right-sidebar {
    width: 200px;
    background: green;
}*/
/* ... */

